# rwutils

./: Cargo.toml  README.md
.github/workflows/: test.yml
lanb/: Cargo.toml
lanb/src/: actions.rs
wls/: Cargo.toml
wls/src/: actions.rs  argparse.rs  main.rs
wmk/: Cargo.toml  README.md
wrm/: Cargo.toml  README.md
wrm/_src/: file_list.rs
wrm/src/: actions.rs  argparse.rs  files_in_trash.rs  main.rs  parse_arguments.rs  utils.rs
wrm/src/actions/: clean.rs  delete.rs  list.rs
