[workspace]
resolver = "2"
members = [
    "wrm",
    "lanb",
]

[workspace.package]
authors = ["p1486 xzstd099@protonmail.com"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/p1486/rwutils.git"
edition = "2021"

[workspace.dependencies]
anyhow = { version = "1.0.79", features = ["backtrace", "std"] }
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
filey = "1.0.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
thiserror = "1.0.56"
