[workspace]
resolver = "2"
members = [
    "wrm",
    "lanb", "wls",
]

[workspace.package]
authors = ["9yokuro xzstd099@protonmail.com"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/9yokuro/rwutils.git"
edition = "2021"

[workspace.dependencies]
anyhow = { version = "1.0.79", features = ["backtrace", "std"] }
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
filey = "1.4.0"
inquire = "0.6.2"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "1.0.56"
walkdir = "2.4.0"
