[package]
name = "lanb"
version = "0.1.1"
description = "Create symbolic links and hard links."
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
filey.workspace = true
thiserror.workspace = true
