[package]
name = "wls"
version = "0.1.0"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
colored.workspace = true
filey.workspace = true
thiserror.workspace = true
walkdir.workspace = true
