[package]
name = "wmk"
version = "0.1.0"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
description = "Create files or directories."
keywords = ["cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap.workspace = true
colored.workspace = true
filey.workspace = true
