[package]
name = "wrm"
version = "0.1.6"
description = "A file deletion utility."
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
filey.workspace = true
inquire.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
