[package]
name = "wrm"
version = "0.2.0"
description = "Remove files or directories."
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
keywords = ["cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
filey.workspace = true
inquire.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
